 * src/callbacks.c: Fix compilation problem with sci_cb_do_comment.
 * src/document.c: Quick fix for C89 compatibility.
 * src/msgwindow.c:
   Make C, C++, Ruby and Java error message parsing more tolerant so
   that linker errors are also parsed if debug line info is available.
   Group all gcc-like error message parsing information together.


2006-09-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/socket.c, src/main.c, src/callbacks.c:
   Moved the socket code from main.c to socket.c.
 * src/document.c: Remove an unchanged empty document when loading a
                   new file (closes #1545129).


2006-09-06  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/document.c, src/ui_utils.c, src/sci_cb.c:
   Added own implementation of an Undo stack (not yet working).
 * src/utils.c, src/document.c:
   Convert tag names to UTF-8 before showing them in the sidebar.
 * src/document.c:
   Fixed a crash when a compiler output reports an error in a blank
   line(can happen in LaTeX). Thanks to Frank for reporting.


2006-09-05  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/templates.c, src/document.c, src/filetypes.c:
   Added new file template for filetype HTML.
 * src/document.c, src/dialogs.c:
   Don't quit when an error occurs while saving changed files.


2006-09-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/utils.h, src/ui_utils.c, src/ui_utils.h,
   src/keybindings.c, src/about.c, src/treeviews.c, src/msgwindow.c,
   src/callbacks.c, src/notebook.c, src/sci_cb.c, src/keyfile.c,
   src/vte.c, src/document.c, src/prefs.c, src/main.c,
   po/POTFILES.in, src/Makefile.am, src/makefile.win32:
   Moved UI related utils from utils.c to ui_utils.c.


2006-09-04  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c, src/main.c, src/main.h:
   Rename --no-socket, -s command-line option to --new-instance, -i.
   Add --no-session, -s command-line option to not load session files.